# fastapi_alchemy_alembic_pytest

./: .gitignore  README.md  alembic.ini  answer_ritm.txt  dockerfile  fill_db_data.py  main.py  orm_crud.py  pyproject.toml  test.py  testq.py  Данные_для_базы.xlsx
alembic/: README  env.py
alembic/versions/: 2024_11_13_1515-c80315b93eb4_add_user_model.py  2024_11_14_0741-127d63aacf72_change_user_model.py  2024_11_14_0806-79f700208d0e_change_user_model.py  2024_11_19_1820-427d64710433_first_step.py  2024_11_21_2243-b11b99b0f9ef_add_table_parts.py  2024_11_29_1624-f91a3a74236a_.py  2024_11_29_1805-75382eb471dc_add_unic_to_article.py  2024_11_29_2335-6e1a9e51d58a_add_column_update_at_exit.py
app/: .env  __init__.py  settings.py
app/api/: parts.py  user.py
app/api/models/: parts.py
orm/: __init__.py  base_model.py  orm_crud.py  orm_model.py  session_manager.py  user_model.py
orm/models/: base_model.py  customer_model.py  installed_machine.py  installed_machine_model.py  order.py  parts_model.py
tests/: conftest.py  db_utils.py  test_api.py  test_orm_works.py
tests/migrations/: conftest.py  test_stairway.py
utils/: gen_it.py  genr.py  repository.py  service_parts.py  test.py  tst.py
